# stash

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: convex.hpp.562736B53305516C.idx  debug.cpp.60BC53ECE47D203A.idx  fetchdata.cpp.40BE1C817CE74F44.idx  flux.hpp.A4B6E010BD7FB85A.idx  main.cpp.9528C3C071F3FF4A.idx  main_application.mm.E26F9CDE2060E0C7.idx  parse_html.cpp.78E2FB61AEB4118E.idx  test.cpp.E7DE71A00AF42591.idx  utils.cpp.8BBD99CF97446E77.idx  utils.hpp.184FA7791DC65E7E.idx
include/: convex.hpp  flux.hpp  utils.hpp
macOS/: app.mm  text_rendering.mm
macOS/render/: mac_utils.mm  main_application.mm  text.mm
stash/convex/: debug.cpp  parse_html.cpp  render.cpp
stash/flux/: fetchdata.cpp  test.cpp
stash/utils/: utils.cpp
test/: main.cpp  test.html
